--- a/edu_app/templates/base2.html
+++ b/edu_app/templates/base2.html
@@ -12,7 +12,7 @@
     <title>Admin - Dashboard</title>
     
 	<!-- Bootstrap 4.0-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap4.css' %}">
 	
 	<!-- Bootstrap extend-->
 	<link rel="stylesheet" href="{% static 'main/css/bootstrap-extend.css' %}">
@@ -133,10 +133,9 @@
 	<script src="{% static 'assets/vendor_components/popper/dist/popper.min.js' %}"></script>
 	
 	<!-- Bootstrap 4.0-->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  
+  <script src="{% static 'bootstrap/js/4.1.js' %}"></script>  
+  <script src="{% static 'bootstrap/js/4.2.js' %}"></script>  
+  <script src="{% static 'bootstrap/js/4.3.js' %}"></script>  
 	
 	<!-- ChartJS -->
 	<script src="{% static 'assets/vendor_components/chart.js-master/Chart.min.js' %}"></script>
