--- a/edu_app/templates/users/datas/bolim_qoshish_data.html
+++ b/edu_app/templates/users/datas/bolim_qoshish_data.html
@@ -137,8 +137,9 @@
                             </div>
                             <div class="form-group col-1"></div>
                             <div class="text-xs-right">
-                                <button type="submit" name="edit" class="btn btn-info mx-5">Saqlash</button>
-                                <button type="submit" name="delete" class="btn btn-info mx-5" style="color: #f8d7da; background-color: #721c24; border-color: #f5c6cb;">O'chirish</button>
+                                
+                                <button type="submit" name='save_again' class="btn btn-info">Yana ma'lumot qo'shish</button>
+                                <button type="submit" name='save' class="btn btn-danger">Saqlash</button>
                             </div>
                     </form>
 
